--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body{
     font-weight: bold;
     font-size: 18px;
     line-height: 1.17;
-    letter-spacing: 0,03em;
+    letter-spacing: 0.03em;
     text-transform:uppercase;
     color: #4d5ae5;
     }
@@ -120,6 +120,7 @@ body{
     font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.02em;
+    text-align: center;
     text-transform: capitalize;
     color: #2E2F42;
 }
@@ -158,6 +159,7 @@ body{
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    text-align: center;
     color: #2E2F42;
 }
 
